--- a/GUI_MODERNISTA_VB/Valorfuturoconinterescompuesto_problema.resx
+++ b/GUI_MODERNISTA_VB/Valorfuturoconinterescompuesto_problema.resx
@@ -118,8 +118,8 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Label2.Text" xml:space="preserve">
-    <value>Supongamos que hoy vamos a depositar $10,000 en una cuenta de banco con saldo en ceros y al final de 2 años 
-retiramos todo el dinero de la cuenta. ¿Cómo calculamos el valor de la cantidad, asumiendo que la tasa de interés 
-es 8% anual compuesto anualmente? </value>
+    <value>Supongamos que hoy vamos a depositar $10,000 en una cuenta de banco con saldo en ceros y al final de 2 años
+retiramos todo el dinero de la cuenta. ¿Cómo calculamos el valor de la cantidad, asumiendo que la tasa de interés
+es del 8% capitalizable anualmente? </value>
   </data>
 </root>
