--- a/GUI_MODERNISTA_VB/valorpresentenetoconanualidad_problema.resx
+++ b/GUI_MODERNISTA_VB/valorpresentenetoconanualidad_problema.resx
@@ -119,8 +119,8 @@
   </resheader>
   <data name="Label2.Text" xml:space="preserve">
     <value>Una empresa X está buscando la rentabilidad de un proyecto de 3 años para la empresa, donde se requiere 
-una inversión inicial de 20,000, con gastos anuales de 5,000, e ingresos anuales de 9,000 y al final del proyecto
-el equipo ocupado se vende por 6,000, el proyecto tiene una TMAR de 15%.
+una inversión inicial de $20,000, con gastos anuales de $5,000, e ingresos anuales de $9,000
+y al final del proyecto el equipo ocupado se vende por $6,000, el proyecto tiene una TMAR de 15%.
 </value>
   </data>
 </root>
