--- a/GUI_MODERNISTA_VB/inversiontotalinicia_teoria.resx
+++ b/GUI_MODERNISTA_VB/inversiontotalinicia_teoria.resx
@@ -124,7 +124,7 @@ necesarios para iniciar las operaciones de la empresa, con excepción del capita
 Se entiende por activo tangible (que se puede tocar) o fijo, los bienes propiedad de la empresa, tales como 
 terrenos, edificios, maquinaria, equipo, mobiliario, vehículos de transporte, herramientas, y otros.
 
-Se le llama “fijo” porque la empresa no puede desprenderse fácilmente de él sin que con ello casi problemas
+Se le llama “fijo” porque la empresa no puede desprenderse fácilmente de él sin que con ello cause problemas
  a sus actividades productivas (a diferencia del activo circulante ).</value>
   </data>
 </root>
