--- a/GUI_MODERNISTA_VB/rentabilidad_teoria.resx
+++ b/GUI_MODERNISTA_VB/rentabilidad_teoria.resx
@@ -119,9 +119,8 @@
   </resheader>
   <data name="Label1.Text" xml:space="preserve">
     <value>La Rentabilidad es una medida de eficiencia para comparar entre diferentes inversiones. Puede que en una
-inversión ganes más dinero, pero sea menos rentable. La rentabilidad la medir mediante la tasa de margen 
-de beneficio que es la diferencia positiva que espera conseguir una organización, una vez que a los ingresos 
-totales se les reste los costes totales, siempre dentro de un periodo contable.
+inversión ganes más dinero, pero sea menos rentable. La rentabilidad la podemos medir mediante la tasa
+de margen de beneficio. 
 </value>
   </data>
 </root>
